# HTLM

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/: README.md  __init__.py
data/pipeline/: README.md  __init__.py  bootstrap.py  cli.py  distill.py  map_mind2web.py  prompt.py  records.py  split.py
data/samples/: travel.jsonl
data/schema/: README.md  action.json  example.json  page-representation.json
docs/: feasibility.md  go-no-go-checklist.md  model-card-template.md  pipeline.md
eval/: README.md
export/: README.md  export.py
extension/: README.md  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/entrypoints/: background.ts  content.ts
extension/entrypoints/offscreen/: index.html  main.ts
extension/entrypoints/sidepanel/: index.html  main.ts
extension/tests/: content-map.test.ts  grounding.test.ts
runtime-bench/: README.md  bench.py  demo.html  harness.html  package.json  serve.py
scripts/: hf-upload.sh
training/: README.md  bakeoff.py  eval.py  formatters.py  train.py  train_mlx.py
training/configs/: _smoke.yaml  functiongemma.yaml  lfm2.5-350m-mlx.yaml  lfm2.5-350m.yaml  qwen2.5-0.5b.yaml
