[project]
name = "htlm"
version = "0.1.0"
description = "On-device fine-tuned LLM for browser navigation (HTLM)"
readme = "data/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "espetro" }]
dependencies = []

# Deps land with the issue that needs them. data -> #3, train -> #4, export -> #5.
[project.optional-dependencies]
data = [
    "datasets>=2.20",
    "jsonschema>=4.20",
    "openai>=1.40",
    "tqdm>=4.66",
]
train = []
export = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data"]

[tool.ruff]
line-length = 100
target-version = "py311"
