[project]
name = "htlm"
version = "0.1.0"
description = "On-device fine-tuned LLM for browser navigation (HTLM)"
readme = "data/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "espetro" }]
dependencies = [
    "mlx-tune>=0.6.0",
]

# Deps land with the issue that needs them. data -> #3, train -> #4, export -> #5.
[project.optional-dependencies]
data = [
    "datasets>=2.20",
    "jsonschema>=4.20",
    "openai>=1.40",
    "tqdm>=4.66",
]
train = [
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.41",
    "accelerate>=0.30",
    "tensorboard>=2.16",
    "pyyaml>=6.0",
    "scipy>=1.12",
]
export = [
    "llama-cpp-python>=0.2",
    "onnxruntime>=1.18",
    "optimum>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data"]

[tool.ruff]
line-length = 100
target-version = "py311"
